Supply a background color to the right sidebar destination view to prevent the underlying map contents from bleeding through.

--- a/app/assets/stylesheets/directory_objects_show.css.scss
+++ b/app/assets/stylesheets/directory_objects_show.css.scss
@@ -104,6 +104,8 @@ body {
   width: 20%; /* Since the map is the other 75% (col-xs-9) */
   overflow: auto;
 
+  background-color: #fff;
+
   position: fixed;
   top: 100px;
   bottom: 100px;
